--- a/Guidelines1/package.json
+++ b/Guidelines1/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@types/node": "^10.12.18",
-    "@types/powerapps-component-framework": "^1.2.0"
+    "@types/powerapps-component-framework": "^1.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "pcf-scripts": "^1",
