--- a/Guidelines1/package.json
+++ b/Guidelines1/package.json
@@ -15,6 +15,9 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/xrm": "^9.0.31",
     "pcf-scripts": "^1",
     "pcf-start": "^1"
   }
