--- a/GuidelinesControl/package.json
+++ b/GuidelinesControl/package.json
@@ -12,8 +12,7 @@
     "@types/node": "^10.12.18",
     "@types/powerapps-component-framework": "^1.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "ste-events": "^1.7.3"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.56",
