--- a/GuidelinesControl/package.json
+++ b/GuidelinesControl/package.json
@@ -6,19 +6,28 @@
     "build": "pcf-scripts build",
     "clean": "pcf-scripts clean",
     "rebuild": "pcf-scripts rebuild",
-    "start": "pcf-scripts start"
+    "start": "pcf-scripts start",
+    "test": "jest"
   },
   "dependencies": {
     "@types/node": "^10.12.18",
     "@types/powerapps-component-framework": "^1.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "espower-typescript": "^9.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-jss": "^10.4.0"
   },
   "devDependencies": {
+    "@fluentui/react": "^7.150.0",
+    "@types/jest": "^26.0.15",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/xrm": "^9.0.31",
+    "jest": "^26.6.3",
     "pcf-scripts": "^1",
-    "pcf-start": "^1"
+    "pcf-start": "^1",
+    "power-assert": "^1.6.1",
+    "ts-jest": "^26.4.4",
+    "typescript": "^3.9.7"
   }
 }
